# cxx-project-template

./: CMakeLists.txt  LICENSE  README.md  hello.cc  hello_library.cc  hello_library.h  hello_library_test.cc
.github/workflows/: cmake.yml
cmake/: Deps.cmake  Options.cmake
cmake/abseil/: CMakeLists.txt.in  Download.cmake
cmake/benchmark/: CMakeLists.txt.in  Download.cmake
cmake/googletest/: CMakeLists.txt.in  Download.cmake
cmake/protobuf/: CMakeLists.txt.in  Download.cmake
